<resources>
    <string name="app_name">Web Browser App</string>
    <string name="urlText">Enter Web Address</string>
    <string name="home">https://www.google.com</string>
    <string name="go">Go</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="runTimeException_control">"Please implement webPageInterface to attach PageControl fragment"</string>
    <string name="runTimeException_view">"Please implement webPageInterface to attach PageViewer fragment"</string>
    <string name="newPage">New Page</string>
    <string name="runTimeException_browser_control">Please implement webPageInterface to attach BrowserControl Fragment</string>
    <string name="runTimeException_page_list">Please implement listInterface to attach PageList Fragment</string>
    <string name="runTimeException_pagerView">Please implement webPageInterface to attach PagerViewer Fragment</string>
    <string name="runTimeException_pager">Please implement pagerInterface to attach Pager Fragment</string>
    <string name="google">https://www.google.com</string>
    <string name="bookmark">Bookmarks</string>
    <string name="saveBookMark">Save</string>
    <string name="deleteBtn">Delete</string>
    <string name="saveBookMarkClick">Bookmark saved</string>
    <string name="deleteMsg">Are you sure you want to delete?</string>
    <string name="close">Close Bookmark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>