<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrowserControlFragment">

    <ImageButton
        android:id="@+id/newPageBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:contentDescription="@string/newPage"
        android:src="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/bookmarkBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:contentDescription="@string/bookmark"
        android:src="@android:drawable/btn_star_big_on" />

    <ImageButton
        android:id="@+id/saveBookMarkBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:contentDescription="@string/saveBookMark"
        android:src="@android:drawable/ic_menu_save" />

</FrameLayout>