<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageControlFragment">

    <EditText
        android:id="@+id/urlEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:autofillHints=""
        android:hint="@string/urlText"
        android:inputType="textUri"
        app:layout_constraintEnd_toStartOf="@+id/goBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/goBtn"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:src="@android:drawable/ic_menu_send"
        app:layout_constraintEnd_toStartOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/urlEditText"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go"/>

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintEnd_toStartOf="@+id/nextBtn"
        app:layout_constraintStart_toEndOf="@+id/goBtn"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:rotation="180"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/next"/>

</androidx.constraintlayout.widget.ConstraintLayout>